syntax = "proto3";

package pixel_plaza.auth_service;

option go_package = "pixel_plaza/auth_service";

service AuthService {
  rpc LogIn(LogInRequest) returns (LogInResponse) {}
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
  rpc LogOut(LogOutRequest) returns (LogOutResponse) {}
  rpc CloseSessions(CloseSessionsRequest) returns (CloseSessionsResponse) {}
  rpc AddPermission(AddPermissionRequest) returns (AddPermissionResponse) {}
  rpc RevokePermission(RevokePermissionRequest) returns (RevokePermissionResponse) {}
  rpc AddRolePermission(AddRolePermissionRequest) returns (AddRolePermissionResponse) {}
  rpc RevokeRolePermission(RevokeRolePermissionRequest) returns (RevokeRolePermissionResponse) {}
  rpc AddRole(AddRoleRequest) returns (AddRoleResponse) {}
  rpc RevokeRole(RevokeRoleRequest) returns (RevokeRoleResponse) {}
}

message LogInRequest {
  string email = 1;
  string hashed_password = 2;
}

message LogInResponse {
  bool success = 1;
  string message = 2;
  string access_token = 3;
  string refresh_token = 4;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message RefreshTokenResponse {
  bool success = 1;
  string message = 2;
  string access_token = 3;
  string refresh_token = 4;
}

message LogOutRequest {
  string refresh_token = 1;
}

message LogOutResponse {
  bool success = 1;
  string message = 2;
}

message CloseSessionsRequest {
  string email = 1;
}

message CloseSessionsResponse {
  bool success = 1;
  string message = 2;
}

message AddPermissionRequest {
  string permission = 1;
}

message AddPermissionResponse {
  bool success = 1;
  string message = 2;
}

message RevokePermissionRequest {
  string permission = 1;
}

message RevokePermissionResponse {
  bool success = 1;
  string message = 2;
}

message AddRolePermissionRequest {
  string role = 1;
  string permission = 2;
}

message AddRolePermissionResponse {
  bool success = 1;
  string message = 2;
}

message RevokeRolePermissionRequest {
  string role = 1;
  string permission = 2;
}

message RevokeRolePermissionResponse {
  bool success = 1;
  string message = 2;
}

message AddRoleRequest {
  string role = 1;
}

message AddRoleResponse {
  bool success = 1;
  string message = 2;
}

message RevokeRoleRequest {
  string role = 1;
}

message RevokeRoleResponse {
  bool success = 1;
  string message = 2;
}